--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "smart-tourism",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "smart-tourism-server",
+  "version": "0.1.0",
   "license": "MIT",
+  "scripts": {
+    "start": "node bin/start.js",
+    "lint": "eslint --ignore-path .gitignore ."
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.11"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.15.0",
+    "eslint-config-strongloop": "^2.1.0"
   }
 }
